--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,6 @@
 # Stage 1: Build the Spring Boot application
-# Use a valid OpenJDK 21 JDK slim image tag
-FROM openjdk:21-jdk-slim as build
+# Use OpenJDK 21 JDK slim image based on 'bookworm'
+FROM openjdk:21-jdk-slim-bookworm as build # Changed to -slim-bookworm
 
 # Set the working directory inside the build container
 WORKDIR /app
@@ -19,8 +19,8 @@ RUN chmod +x ./gradlew
 RUN ./gradlew clean bootJar -x test --no-daemon
 
 # Stage 2: Create the final production image
-# Use a valid OpenJDK 21 JRE slim image tag
-FROM openjdk:21-jre-slim
+# Use OpenJDK 21 JRE slim image based on 'bookworm'
+FROM openjdk:21-jre-slim-bookworm # Changed to -slim-bookworm
 
 # Set the working directory for the final container
 WORKDIR /app
